# electronic_digital_signature

./: .gitignore  .pylintrc  README.md
backend/: pyproject.toml
backend/api/: .env.exmple  pytest.ini
backend/api/api/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/api/settings/: base.py  development.py  production.py  test.py
backend/api/apps/employees/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/api/apps/organizations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/apps/signatures/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/api/core/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/api/core/migrations/: 0001_initial.py  0002_electronicdigitalsignature_and_more.py  0003_alter_electronicdigitalsignature_options_and_more.py  0004_alter_civildocument_birthdate_and_more.py  0005_alter_electronicdigitalsignature_owner_and_more.py  0006_civildocument_created_at_civildocument_updated_at_and_more.py  0007_employee_author.py  0008_alter_employee_author.py  0009_alter_employee_author.py  0010_alter_employee_author.py  0011_remove_employee_author_civildocument_created_by_and_more.py  0012_alter_civildocument_created_by_and_more.py  0013_remove_employee_civil_document_and_more.py  0014_alter_electronicdigitalsignature_end_date_and_more.py  0015_alter_electronicdigitalsignature_end_date_and_more.py  0016_certificationcenter_and_more.py  0018_rename_title_certificationcenter_name_and_more.py  (+1 more)
frontend/: README.md
(+21 files in other folders)
